--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -6,9 +6,24 @@ draft = false
 
 #### 内存对齐
 
-1. 分配内存的顺序是按照声明的顺序
-2. 每个变量相对于起始位置的偏移量必须是该变量类型大小的整数倍，不是整数倍空出内存，直到偏移量是整数倍为止
-3. 整个结构体的大小必须是里面变量类型最大值的整数倍
+- 对齐：计算机中内存空间都按照 byte 划分，理论上似乎对任何类型的变量的访问可以从任何地址开始；但实际在访问特定类型变量时，需要各种类型数据按照一定规则在特定空间上排列，而不是顺序地、紧连着排放
+
+  ```cpp
+  #include <stdint.h>
+  struct {
+      uint32_t m1;
+      char m2;
+  } varray;
+  
+  int main() {
+      printf("%d\n",sizeof(varray.m1));  // 输出4
+      printf("%d\n",sizeof(varray.m2));  // 输出1
+      printf("%d\n",sizeof(varray));     // 输出8
+      return 0;
+  }
+  ```
+
+---
 
 #### 为什么内存对齐
 
@@ -21,46 +36,47 @@ draft = false
    - 数据结构(尤其是栈)应该尽可能地在自然边界上对齐
    - 为了访问未对齐的内存，处理器需要作两次内存访问；而对齐的内存访问仅需要一次访问
 
+---
+
+#### 对齐的规则
+
+- 不同平台的编译器都有自己的默认“对齐系数”（对齐模数）
+- 通过预编译命令`#pragma pack(n)` (n=1,2,4,8,16)，其中 n 就是指定的“对齐系数”
+- 有效对齐值：`#pragma pack`指定值 和 结构体中最长数据类型长度 中**较小**的值，也叫对齐单位
+- 规则：
+  1. 结构体变量的首地址是有效对齐值（对齐单位）的整数倍
+  2. 结构体第一个成员的偏移量（offset）为0，以后每个成员相对于结构体首地址的 offset 都是该成员大小与有效对齐值中较小数值的整数倍，如有需要编译器会在成员间填充字节
+  3. 结构体的总大小为 有效对齐值 的整数倍，如有需要编译器会在最末一个成员后填充字节
+  4. 结构体内类型相同的连续元素将在连续的空间内，就像数组一样
+  5. 按照元素声明的顺序分配内存
+
+---
+
 #### #pragma pack(n)
 
 - 设定结构体、联合以及类成员变量以 n 字节方式对齐
-- 使用
+- 原理：通过改变**有效对齐值**来改变数据成员在内存中的布局，如果设定的 n 值没有影响或改变有效对齐值，则成员的内存布局不变
+- 使用：
 
-```cpp
-#pragma pack(push)  // 保存对齐状态
-#pragma pack(4)     // 设定为 4 字节对齐
-struct test
-{
-    char m1;
-    double m4;
-    int m3;
-};
-#pragma pack(pop)   // 恢复对齐状态
-```
+  ```cpp
+  #pragma pack(push)  // 保存对齐状态
+  #pragma pack(4)     // 设定为 4 字节对齐
+  struct test
+  {
+      char m1;
+      double m4;
+      int m3;
+  };
+  #pragma pack(pop)   // 恢复对齐状态
+  ```
 
----
-
-#### 结构体成员偏移量
-
-- [c - How to understand "((size_t) &((TYPE *)0)->MEMBER)"? - Stack Overflow](https://stackoverflow.com/questions/18554721/how-to-understand-size-t-type-0-member)
-- 实现
-
-```cpp
-struct node_t {
-    char a;
-    int b;
-    int c;
-};
-struct node_t node;
-// 方法1
-(unsigned long)(&(node.c)) - (unsigned long)(&(node))
-// 方法2
-#define OFFSET_OF(type, member) (unsigned long)(&(((type *)0)->member))
-```
+- 注意：
+  - VS、VC 默认是#pragma pack(8)
+  - gcc 默认是#pragma pack(4)，且gcc只支持1, 2, 4对齐
 
 ---
 
-#### POD ( Plain Old Data ) 数据结构
+#### POD(Plain Old Data)数据
 
 1. 特征：
    - 不能写构造/析构函数、拷贝/移动构造函数、拷贝/移动运算符，而是用编译器自动生成的
@@ -72,6 +88,27 @@ struct node_t node;
      - 所有非静态成员都符合标准布局类型，其父类也符合标准布局
 2. 可直接使用`memcpy`等函数
 3. C++判断：`is_pod<T>::value `
+
+---
+
+#### 结构体成员偏移量
+
+- [How to understand "((size_t) &((TYPE *)0)->MEMBER)"?](https://stackoverflow.com/questions/18554721/how-to-understand-size-t-type-0-member)
+- 实现
+
+  ```cpp
+  struct node_t {
+      char a;
+      int b;
+      int c;
+  };
+  struct node_t node;
+  
+  // 方法1
+  (unsigned long)(&(node.c)) - (unsigned long)(&(node))
+  // 方法2
+  #define OFFSET_OF(type, member) (unsigned long)(&(((type *)0)->member))
+  ```
 
 ---
 
@@ -88,7 +125,7 @@ struct node_t node;
    		char c[4]; 
    		unsigned long mylong; 
    } endian_test = {{ 'l', '?', '?', 'b' } };
-   		
+
    #define ENDIANNESS ((char)endian_test.mylong)
    // 如果ENDIANNESS=‘l’则代表是小端 .是'b'则代表是大端.
    if (ENDIANNESS == 'b')/* 高位在低字节 */
@@ -131,15 +168,85 @@ struct node_t node;
 
 ---
 
-#### 堆栈
+#### 程序在内存中的分段
+
+当一个程序运行时，程序的不同部分会在不同区域的内存中存储
+
+1. 代码段/正文段：由CPU执行的机器指令部分
+    - 由装载器装载，将可执行文件读取或映射到该内存，程序如何运行由代码段决定
+    - 代码段的内容是只读的，以防止程序由于意外而修改其指令
+    - 代码段是可以共享的；一个程序的可以同时执行`N`次，但该程序的代码段在内存中只需要存在一份
+
+2. 只读段：用来存储只读数据的
+    - 存放常量字符串，字面值数据，常量等
+    - 程序运行结束时由内核自动释放
+
+3. 数据段/初始化数据段/`DATA`段：存储**初始化**过的全局变量、静态变量
+    - 在程序开始执行之前，内核将此段中的变量初始化为程序赋予的初值
+    - 程序运行结束时由内核自动释放
+
+4. 静态数据段/未初始化数据段/`BSS`段：存储**未初始化**过的全局变量、静态变量
+    - 在程序开始执行之前，内核将此段中的数据初始化为0或者空指针
+    - 程序运行结束时由内核自动释放
+
+    > 数据段 和 静态数据段 又统称为 全局(静态)存储区
+
+5. 栈 (stack)：存储局部变量、块变量等数据
+    - 由内核管理、自动分配和释放，存放**函数**调用过程中的各种参数、局部变量、返回值以及函数返回地址
+    - 操作方式类似数据结构中的栈
+
+6. 堆 (heap)：由程序管理的一块内存
+    - 由**程序自身**动态申请分配和释放空间
+    - C语言中的 malloc 和 free
+    - C++中的 new 和 delete
+    - 正常情况下，程序申请的空间在使用结束后需要释放；若程序没有释放，则程序结束时内核自动回收
 
 ---
 
-#### 内存分配和管理
+#### 栈 (stack)
 
-##### C++内存模型
+1. 申请/释放方式：由内核自动分配、释放
 
-* [超详细资料](https://www.cnblogs.com/alexcool/articles/9241548.html)
+    ```c++
+    void func () {
+        int b; // 声明时由内核自动申请分配
+        /* do something */
+    }; // 函数退出时由内核自动释放
+    ```
+
+2. 申请后内核的响应：只要栈的剩余空间大于申请空间，系统将为程序提供内存，否则将报异常提示栈溢出
+
+3. 申请大小的限制：
+
+    - Windows下栈是向低地址扩展的数据结构，是一块**连续**的内存的区域
+    - 栈顶的地址和栈的最大容量是系统预先规定好的常量，一般的WINDOWS栈的大小是2M或1M
+
+4. 申请效率：栈由内核自动分配，速度较快
+
+5. 栈的存储内容：
+
+    - 主函数中后的下一条指令（函数调用语句的下一条可执行语句）的地址，以及调用者的环境信息（如某些CPU 寄存器的值）
+
+    - 函数的各个参数（在大多数的C编译器中，参数是由右往左入栈的）
+
+    - 函数中的局部变量
+
+    > 函数调用的顺序依次是指令地址等、函数参数、函数局部变量
+
+    > 当函数调用结束后，出栈顺序为函数局部变量、函数参数，最后栈顶指针指向最开始存的地址，也就是主函数中的下一条指令，程序由该点继续运行
+
+6. 特点：
+
+    - 栈是**线程**独有的，即**栈是线程安全的**
+    - 栈内存的大小有限，不适合保存大量数据
+    - 栈内存不适合长久保存数据（当函数结束后它就会被释放）
+
+
+---
+
+#### 堆 (heap) & 内存分配和管理
+
+##### C/C++堆内存相关方法
 
 | 分配                     | 释放                       | 类型      | 是否重新定义             |
 | ------------------------ | -------------------------- | --------- | ------------------------ |
@@ -148,21 +255,23 @@ struct node_t node;
 | ::operator new()         | ::operator delete()        | C++函数   | 可以，重载               |
 | allocator<T>::allocate() | allocator<T>::deallocate() | C++标准库 | 可自由设计并搭配任何容器 |
 
-##### malloc、calloc、realloc、alloca
+---
+
+##### malloc/calloc/realloc/alloca
 
 1. malloc：申请指定字节数的内存。申请到的内存中的初始值不确定。
 
    * 原理：
 
-     i. 空闲链表：将可用的内存块连接为一个长长的列表
+     i. 空闲链表：将可用的内存块连接为一个长链表
 
-     ii. 调用malloc函数时，沿链表寻找一个大到足以满足用户请求所需要的内存块
+     ii. 调用malloc函数时，沿链表寻找一块满足需要大小的内存
 
-     iii. 将该内存块一分为二（一块的大小与用户请求的大小相等，另一块的大小就是剩下的字节）
+     iii. 将该内存块一分为二，一块的大小为所需内存大小，另一块的是剩下的内存空间
 
-     iv. 将分配给用户的那块内存传给用户，并将剩下的那块（如果有的话）返回到连接表上
+     iv. 将分配给用户的内存传给用户，并将剩下的（如果有的话）返回到连接表上
 
-     v. 调用free函数时，它将用户释放的内存块连接到空闲链上
+     v. 调用free函数时，将用户释放的内存块连接到空闲链上
 
      vi. 如果空闲链会被切成很多的小内存片段，空闲链上可能不能满足用户要求的片段。则malloc函数请求延时，并开始在空闲链上检查各内存片段并整理，将相邻的小空闲块合并成较大的内存块。
 
@@ -174,49 +283,44 @@ struct node_t node;
 
 4. alloca：在**栈**上申请内存。程序在出栈的时候，会自动释放内存。但是需要注意的是，alloca 不具可移植性, 而且在没有传统堆栈的机器上很难实现。alloca 不宜使用在必须广泛移植的程序中。C99 中支持变长数组 (VLA)，可以用来替代 alloca。（Google风格不允许使用）
 
-##### malloc、free
+---
 
-用于分配、释放内存
+##### malloc & free
 
-malloc、free 使用
+- malloc：申请内存，需要确认是否申请成功
 
-申请内存，确认是否申请成功
+    ```cpp
+    char *str = (char*) malloc(100);
+    assert(str != nullptr);
+    ```
 
-```cpp
-char *str = (char*) malloc(100);
-assert(str != nullptr);
-```
+- free：释放由`malloc`申请的内存，释放内存后指针需要置空，否则造成野指针/无效指针
 
-释放内存后指针置空
+    ```cpp
+    free(p); 
+    p = nullptr;
+    ```
 
-```cpp
-free(p); 
-p = nullptr;
-```
+---
 
-##### new、delete
+##### new & delete
 
-1. new / new[]：完成两件事，先底层调用 malloc 分配了内存，然后调用构造函数（创建对象）。
-2. delete/delete[]：也完成两件事，先调用析构函数（清理资源），然后底层调用 free 释放空间。
-3. new 在申请内存时会自动计算所需字节数，而 malloc 则需我们自己输入申请内存空间的字节数。
-4. new 必须和 delete 配合使用
-5. new 申请的内存在**堆**中，不会随着函数结束而消失
-6. new 先通过`malloc`分配内存，再调用构造函数；delete 先调用析构函数，再通过`free`释放内存
+- new / new[]：完成两件事，先底层调用 malloc 分配了内存，然后调用构造函数（创建对象）。
+- delete/delete[]：也完成两件事，先调用析构函数（清理资源），然后底层调用 free 释放空间。
+- new 在申请内存时会自动计算所需字节数，而 malloc 则需我们自己输入申请内存空间的字节数。
+- new 必须和 delete 配合使用
+- new 申请的内存在**堆**中，不会随着函数结束而消失
+- new & delete 使用：
+    ```cpp
+    int main()
+    {
+        T* t = new T();     // 先内存分配 ，再构造函数
+        delete t;           // 先析构函数，再内存释放
+        return 0;
+    }
+    ```
 
-new、delete 使用
-
-申请内存，确认是否申请成功
-
-```cpp
-int main()
-{
-    T* t = new T();     // 先内存分配 ，再构造函数
-    delete t;           // 先析构函数，再内存释放
-    return 0;
-}
-```
-
-* new**表达式**内部细节:
+- new 的实现细节: new 先通过`malloc`分配内存，再调用构造函数
 
   ```c++
   Complex* pc = new Complex(1,2); // new expression（new表达式）
@@ -237,7 +341,7 @@ int main()
   }
   ```
 
-* delete**表达式**内部细节:
+- delete 的实现细节: delete 先调用析构函数，再通过`free`释放内存
 
   ```c++
   delete pc; // delete expression
@@ -254,9 +358,11 @@ int main()
 
   <img src="/images/cpp/cpp_mem.png"/>
 
-##### 定位 new（placement new）
+---
 
-定位 new（placement new）在用户**指定的已经分配的内存**上构建对象，这个过程不会申请新的内存，只会调用对象的构造函数；同时允许向 new 传递**额外的地址参数**，从而在预先指定的内存区域创建对象。
+##### 定位 new (placement new)
+
+在用户**指定的已经分配的内存**上构建对象，但不会申请新的内存，只会调用对象的构造函数；同时允许向 new 传递**额外的地址参数**，从而在预先指定的内存区域创建对象。
 
 ```cpp
 new (place_address) type
@@ -291,85 +397,100 @@ new (place_address) type [size] { braced initializer list }
   }
   ```
 
-- placement delete：如果一个带额外参数的operator new（即placement new）没有“带相同参数”的对应版operator delete，那么就当new的内存分配动作出现异常时就没有任何operator delete被调用，于是产生内存泄露。
+- placement delete：如果一个带额外参数的operator new (即placement new) 没有“带相同参数”的对应版operator delete，那么就当new的内存分配动作出现异常时就没有任何operator delete被调用，于是产生内存泄露。
+
+---
 
 ##### 重载 operator new / delete
 
-* new/delete运算符重载的一些规则
+1. 重载规则
 
   * new和delete运算符重载必须成对出现
   * new运算符的第一个参数必须是`size_t`类型，delete运算符的第一个参数则必须是要销毁释放的内存对象
   * 系统默认实现了`new/delete`、`new[]/delete[]`、`placement new/delete` 6个运算符函数
   * 当delete运算符的参数 ≥ 2时，需要自己调用析构函数，并且以运算符函数的形式来调用delete运算符
 
-* 代码：
+2. 示例：
 
-  ```c++
-  class A {
-    public；
-      A(){}
-      void * operator new(size_t size);
-      void * operator new[](size_t size);
-      void * operator new(size_t size, void *p);  // placement new
-      void * operator new(size_t size, int a, int b);
-      
-      void operator delete(void *p);
-      void operator delete[](void *p);
-      void operator delete(void *p, void *p1);  // placement delete，只有placement new不能完整执行时调用
-      void operator delete(void *p, int a, int b);
-  };
-  
-  class B {
-    public:
-      B(){}
-  }
-  
-  //全局运算符函数，请谨慎重写覆盖全局运算符函数。
-  void * operator new(size_t size);
-  void * operator new[](size_t size);
-  void * operator new(size_t size, void *p) noexcept;
-  void * operator new(size_t size, int a, int b);
-  
-  void operator delete(void *p);
-  void operator delete[](void *p);
-  void operator delete(void *p, void *p1);
-  void operator delete(void *p, int a, int b);
-  
-  int main(){
-    char buf[100];
-  
-    A *a1 = new CA();   //调用void * A::operator new(size_t size)
-    A *a2 = new CA[10];  //调用void * A::operator new[](size_t size)
-    A *a3 = new(buf)CA();  //调用void * A::operator new(size_t size, void *p)
-    A *a4 = new(10, 20)CA();  //调用void* A::operator new(size_t size, int a, int b)
+    ```c++
+    class A {
+      public；
+        A(){}
+        void *operator new(size_t size);
+        void *operator new[](size_t size);
+        void *operator new(size_t size, void *p); // placement new
+        void *operator new(size_t size, int a, int b);
+        
+        void operator delete(void *p);
+        void operator delete[](void *p);
+        // placement delete，只有placement new不能完整执行时调用
+        void operator delete(void *p, void *p1);
+        void operator delete(void *p, int a, int b);
+    };
     
-    delete a1;  //调用void A::operator delete(void *p)
-    delete[] a2;  //调用void A::operator delete[](void *p)
-    a3->~CA();  //a3用的是placement new的方式分配，因此需要自己调用对象的析构函数。
-    A::operator delete(a3, buf);  //调用void CA::operator delete(void *p, void *p1)，要带上类命名空间
-    a4->~CA();  //a4的运算符参数大于等于2个，所以需要自己调用对象的析构函数
-    A::operator delete(a4, 10, 20); //调用void CA::operator delete(void *p, int a, int b)
-  
-    //B类没有重载运算符，因此使用的是全局重载的运算符。
-    B *b1 = new B();  //调用void * operator new(size_t size)
-    B *b2 = new B[10]; //调用void * operator new[](size_t size)
-    //这里你可以看到同一块内存可以用来构建CA类的对象也可以用来构建CB类的对象
-    B *b3 = new(buf)B();  //调用void * operator new(size_t size, void *p)
-    B *b4 = new(10, 20)CB(); //调用void* operator new(size_t size, int a, int b)
-  
-    delete b1;  //调用void operator delete(void *p)
-    delete[] b2;   //调用void operator delete[](void *p)
-    //b3用的是placement new的方式分配，因此需要自己调用对象的析构函数。
-    b3->~B();
-    ::operator delete(b3, buf);  //调用void operator delete(void *p, void *p1)
-    //b4的运算符参数大于等于2个所以需要自己调用对象的析构函数。
-    b4->~B();
-    ::operator delete(b4, 10, 20);  //调用void operator delete(void *p, int a, int b)
-   
-   return 0;
-  }
-  ```
+    class B {
+      public:
+        B(){}
+    };
+    
+    //全局运算符函数，请谨慎重写覆盖全局运算符函数。
+    void *operator new(size_t size);
+    void *operator new[](size_t size);
+    void *operator new(size_t size, void *p) noexcept;
+    void *operator new(size_t size, int a, int b);
+    
+    void operator delete(void *p);
+    void operator delete[](void *p);
+    void operator delete(void *p, void *p1);
+    void operator delete(void *p, int a, int b);
+    
+    int main() {
+      char buf[100];
+    
+      A *a1 = new CA();   //调用void * A::operator new(size_t size)
+      A *a2 = new CA[10];  //调用void * A::operator new[](size_t size)
+      A *a3 = new(buf)CA();  //调用void * A::operator new(size_t size, void *p)
+      A *a4 = new(10, 20)CA();  //调用void* A::operator new(size_t size, int a, int b)
+      
+      delete a1;  //调用void A::operator delete(void *p)
+      delete[] a2;  //调用void A::operator delete[](void *p)
+      a3->~CA();  //a3用的是placement new的方式分配，因此需要自己调用对象的析构函数。
+      A::operator delete(a3, buf);  //调用void CA::operator delete(void *p, void *p1)，要带上类命名空间
+      a4->~CA();  //a4的运算符参数大于等于2个，所以需要自己调用对象的析构函数
+      A::operator delete(a4, 10, 20); //调用void CA::operator delete(void *p, int a, int b)
+    
+      //B类没有重载运算符，因此使用的是全局重载的运算符。
+      B *b1 = new B();  //调用void * operator new(size_t size)
+      B *b2 = new B[10]; //调用void * operator new[](size_t size)
+      //这里你可以看到同一块内存可以用来构建CA类的对象也可以用来构建CB类的对象
+      B *b3 = new(buf)B();  //调用void * operator new(size_t size, void *p)
+      B *b4 = new(10, 20)CB(); //调用void* operator new(size_t size, int a, int b)
+    
+      delete b1;  //调用void operator delete(void *p)
+      delete[] b2;   //调用void operator delete[](void *p)
+      //b3用的是placement new的方式分配，因此需要自己调用对象的析构函数。
+      b3->~B();
+      ::operator delete(b3, buf);  //调用void operator delete(void *p, void *p1)
+      //b4的运算符参数大于等于2个所以需要自己调用对象的析构函数。
+      b4->~B();
+      ::operator delete(b4, 10, 20);  //调用void operator delete(void *p, int a, int b)
+    
+    return 0;
+    }
+    ```
 
+---
+
+#### 如何定义只能在堆/栈生成对象的类？
+
+> [如何定义一个只能在堆上（栈上）生成对象的类?](https://www.nowcoder.com/questionTerminal/0a584aa13f804f3ea72b442a065a7618)
+>
+> [c++ - how to create object on 1>stack only and not on heap and 2>heap only not on stack](https://stackoverflow.com/questions/36077839/how-to-create-object-on-1stack-only-and-not-on-heap-and-2heap-only-not-on-stac)
+
+|      | 只能在堆上                                                   | 只能在栈上                                                   |
+| ---- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 方法 | 将**析构函数**设置为**私有**                                 | 将 **new 和 delete** 重载为**私有**                          |
+| 原理 | C++编译器委托内核管理栈上对象的生命周期，分配空间前会先检查类的析构函数的访问性。若**析构函数不可访问，则不能在栈上创建对象**。 | 将 new 设置为私有，无法在堆上寻找可用内存并分配给对象，就不能够在堆上生成对象。 |
 
 ---
 
@@ -377,7 +498,7 @@ new (place_address) type [size] { braced initializer list }
 
 > [Is it legal (and moral) for a member function to say delete this?](https://isocpp.org/wiki/faq/freestore-mgmt#delete-this)
 
-合法，但：
+**合法**，但：
 
 1. 必须保证 this 对象是通过 `new`（不是 `new[]`、不是 placement new、不是栈上、不是全局、不是其他对象成员）分配的
 2. 必须保证调用 `delete this` 的成员函数是最后一个调用 this 的成员函数
@@ -386,25 +507,11 @@ new (place_address) type [size] { braced initializer list }
 
 ---
 
-#### 如何定义一个只能在堆上（栈上）生成对象的类？
-
-> [如何定义一个只能在堆上（栈上）生成对象的类?](https://www.nowcoder.com/questionTerminal/0a584aa13f804f3ea72b442a065a7618)
-
-##### 只能在堆上
-
-方法：将析构函数设置为私有
-
-原因：C++ 是静态绑定语言，编译器管理栈上对象的生命周期，编译器在为类对象分配栈空间时，会先检查类的析构函数的访问性。若析构函数不可访问，则不能在栈上创建对象。
-
-##### 只能在栈上
-
-方法：将 new 和 delete 重载为私有
-
-原因：在堆上生成对象，使用 new 关键词操作，其过程分为两阶段：第一阶段，使用 new 在堆上寻找可用内存，分配给对象；第二阶段，调用构造函数生成对象。将 new 操作设置为私有，那么第一阶段就无法完成，就不能够在堆上生成对象。
-
 ---
 
 #### 共享内存
+
+---
 
 ---
 
@@ -412,31 +519,33 @@ new (place_address) type [size] { braced initializer list }
 
 ---
 
+---
+
 #### 函数指针
 
-##### 定义
+1. 定义
 
-- 函数指针指向的是特殊的数据类型，函数的类型是由其返回的数据类型和其参数列表共同决定的，而函数的名称则不是其类型的一部分
-- 一个具体函数的名字，如果后面不跟调用符号(即括号)，则该名字就是该函数的指针(注：大部分情况下正确，但并不严格)
+    - 函数指针指向的是特殊的数据类型，函数的类型是由其返回的数据类型和其参数列表共同决定的，而函数的名称则不是其类型的一部分
+    - 一个具体函数的名字，如果后面不跟调用符号(即括号)，则该名字就是该函数的指针(注：大部分情况下正确，但并不严格)
 
-##### 声明方法
+2. 声明方法
 
-```c++
-int (*pf)(const int&, const int&);
-```
+    ```c++
+    int (*pf)(const int&, const int&);
+    ```
 
-上面的pf就是一个函数指针，指向所有返回类型为int，并带有两个const int&参数的函数。注意*pf两边的括号是必须的，否则上面的定义就变成了：
+    上面的pf就是一个函数指针，指向所有返回类型为int，并带有两个const int&参数的函数。注意*pf两边的括号是必须的，否则上面的定义就变成了：
 
-```c++
-int *pf(const int&, const int&);
-```
+    ```c++
+    int *pf(const int&, const int&);
+    ```
 
-而这声明了一个函数pf，其返回类型为int *， 带有两个const int&参数。
+    而这声明了一个函数pf，其返回类型为int *， 带有两个const int&参数。
 
-##### 为什么有函数指针
+3. 为什么有函数指针
 
-- 函数与数据项相似，函数也有地址。在同一个函数中通过使用相同的形参在不同的时间使用产生不同的效果。
-- 一个函数名就是一个指针，它指向函数的代码。一个函数地址是该函数的进入点，也就是调用函数的地址。函数的调用可以通过函数名，也可以通过指向函数的指针来调用。函数指针还允许将函数作为变元传递给其他函数；
-- 两种方法赋值： 指针名 = 函数名；  指针名 = &函数名
+    - 函数与数据项相似，函数也有地址。在同一个函数中通过使用相同的形参在不同的时间使用产生不同的效果。
+    - 一个函数名就是一个指针，它指向函数的代码。一个函数地址是该函数的进入点，也就是调用函数的地址。函数的调用可以通过函数名，也可以通过指向函数的指针来调用。函数指针还允许将函数作为变元传递给其他函数；
+    - 两种方法赋值： 指针名 = 函数名；  指针名 = &函数名
 
 ---
