update namespace etc

--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -402,7 +402,7 @@ draft = false
 
 ---
 
-#### 虚继承、虚函数
+#### 虚继承 vs 虚函数
 
 - 相同之处：都利用了虚指针（均占用类的存储空间）和虚表（均不占用类的存储空间）
 - 不同之处：
@@ -415,15 +415,15 @@ draft = false
 
 ---
 
-#### 抽象类、接口类、聚合类
+#### 抽象类vs接口类vs聚合类
 
 - 抽象类：含有纯虚函数的类
 - 接口类：**仅**含有**纯虚函数**的**抽象类**
 - 聚合类：用户可以直接访问其成员，并且具有特殊的初始化语法形式。满足如下特点：
-  - 所有成员都是 public
-  - 没有定义任何构造函数
-  - 没有类内初始化
-  - 没有基类，也没有 virtual 函数
+  1. 所有成员都是 public
+  2. 没有定义任何构造函数
+  3. 没有类内初始化
+  4. 没有基类，也没有 virtual 函数
 
 ---
 > 以上为类的方法相关内容
@@ -431,7 +431,7 @@ draft = false
 
 #### 类的成员
 
-##### 静态成员与普通成员的区别
+##### 静态成员 vs 普通成员
 
 1. 生命周期：
     - 静态成员变量从类被加载开始到类被卸载，一直存在
@@ -460,9 +460,9 @@ draft = false
         3. 没有默认构造函数的类类型，因为使用初始化列表可以不必调用默认构造函数来初始化，而直接调用拷贝构造函数初始化
     - 成员是按照它们在**类中出现的顺序**进行初始化的，而**不是**按照它们在初始化列表出现的顺序初始化的
 
-- 具体做了什么
-    1. 编译器会一 一操作初始化列表，以适当的顺序在构造函数之内安插初始化操作，并且在任何显示用户代码之前；
-    2. list中的项目顺序是由类中的成员声明顺序决定的，不是由初始化列表的顺序决定的；
+- 原理
+    1. 编译器会一 一操作初始化列表，以适当的顺序在构造函数之内安插初始化操作，并且在任何显示用户代码之前
+    2. list中的项目顺序是由类中的成员声明顺序决定的，不是由初始化列表的顺序决定的
 
 ---
 
