--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -214,12 +214,12 @@ draft = false
     }; // 函数退出时由内核自动释放
     ```
 
-2. 申请后内核的响应：只要栈的剩余空间大于申请空间，系统将为程序提供内存，否则将报异常提示栈溢出
+2. 申请后内核的响应：只要栈的剩余空间大于申请空间，内核将为程序提供内存，否则将报异常提示栈溢出
 
 3. 申请大小的限制：
 
     - Windows下栈是向低地址扩展的数据结构，是一块**连续**的内存的区域
-    - 栈顶的地址和栈的最大容量是系统预先规定好的常量，一般的WINDOWS栈的大小是2M或1M
+    - 栈顶的地址和栈的最大容量是内核预先规定好的常量，一般的WINDOWS栈的大小是2M或1M
 
 4. 申请效率：栈由内核自动分配，速度较快
 
@@ -407,7 +407,7 @@ new (place_address) type [size] { braced initializer list }
 
   * new和delete运算符重载必须成对出现
   * new运算符的第一个参数必须是`size_t`类型，delete运算符的第一个参数则必须是要销毁释放的内存对象
-  * 系统默认实现了`new/delete`、`new[]/delete[]`、`placement new/delete` 6个运算符函数
+  * 内核默认实现了`new/delete`、`new[]/delete[]`、`placement new/delete` 6个运算符函数
   * 当delete运算符的参数 ≥ 2时，需要自己调用析构函数，并且以运算符函数的形式来调用delete运算符
 
 2. 示例：
