--- a/content/cpp/1.language_grammar.md
+++ b/content/cpp/1.language_grammar.md
@@ -737,64 +737,92 @@ int main() {
 
 #### 命名空间与作用域
 
+##### namespace
+
+- 命名冲突/命名空间污染：定义的变量、函数、类等和不同库中的内容发生冲突，如下：
+
+    ```cpp
+    #include <stdio.h>
+    #include <stdlib.h> // 定义了 rand() 的函数
+
+    int rand = 0; // 与 rand() 名称冲突
+
+    int main(void) {
+      printf("rand = %d\n", rand);
+      return 0;
+    }
+    ```
+
+- namespace: 避免与其他库定义的名字冲突，将库的内容放置在自己独立的命名空间中；如C++标准库的命名空间为`std`
+
+    ```cpp
+    #include <stdio.h>
+    #include <stdlib.h> // 定义了 rand() 的函数
+
+    namespace r {
+      int rand = 0;
+    };
+
+    int main(void) {
+      printf("rand = %d\n", rand); // rand() 函数地址
+      printf("rand = %d\n", rand()); // rand() 函数返回值
+      printf("rand = %d\n", r::rand); // 0, 上边定义的数值
+      return 0;
+    }
+    ```
+
 ##### using (C++11)
 
-###### using 声明
+1. using 声明：**一次只引入命名空间的一个成员**，可以清楚知道程序中所引用的到底是哪个名字。如：
 
-一条 `using 声明` 语句**一次只引入命名空间的一个成员**。它使得我们可以清楚知道程序中所引用的到底是哪个名字。如：
+    ```cpp
+    using namespace_name::name;
+    ```
 
-```cpp
-using namespace_name::name;
-```
+2. 构造函数的 using 声明：派生类能够重用它的直接基类定义的构造函数
 
-###### 构造函数的 using 声明
+    ```cpp
+    class Derived : Base {
+    public:
+        using Base::Base;
+        /* ... */
+    };
+    ```
 
-在 C++11 中，派生类能够重用其直接基类定义的构造函数
+    > 如上 using 声明，对于基类的每个构造函数，编译器都生成一个与之对应（形参列表完全相同）的派生类构造函数。生成如下类型构造函数：
 
-```cpp
-class Derived : Base {
-public:
-    using Base::Base;
-    /* ... */
-};
-```
+    ```cpp
+    Derived(parms) : Base(args) { }
+    ```
 
-如上 using 声明，对于基类的每个构造函数，编译器都生成一个与之对应（形参列表完全相同）的派生类构造函数。生成如下类型构造函数：
+3. using 指示：使得某个特定命名空间中所有名字都可见，无需再添加任何前缀限定符。如：
 
-```cpp
-Derived(parms) : Base(args) { }
-```
+    ```cpp
+    using namespace_name name;
+    ```
 
-###### using 指示
+4. using 使用注意事项
 
-`using 指示` 使得某个特定命名空间中所有名字都可见，这样我们就无需再为它们添加任何前缀限定符了。如：
+    - 少使用 `using 指示`：使用 using 命令比使用 using 编译命令更安全，是因为**只导入了指定的名称**。如果该名称与局部名称发生冲突，编译器将**发出指示**。using编译命令导入所有的名称，包括可能并不需要的名称。如果与局部名称发生冲突，则**局部名称将覆盖名称空间版本**，而编译器**并不会发出警告**。另外，名称空间的开放性意味着名称空间的名称可能分散在多个地方，导致难以准确知道添加了哪些名称。
 
-```cpp
-using namespace_name name;
-```
+        ```cpp
+        using namespace std;
+        ```
 
-###### using 使用注意事项
+    - 多使用 `using 声明`
 
-- 少使用 `using 指示`：一般说来，使用 using 命令比使用 using 编译命令更安全，这是由于它**只导入了指定的名称**。如果该名称与局部名称发生冲突，编译器将**发出指示**。using编译命令导入所有的名称，包括可能并不需要的名称。如果与局部名称发生冲突，则**局部名称将覆盖名称空间版本**，而编译器**并不会发出警告**。另外，名称空间的开放性意味着名称空间的名称可能分散在多个地方，这使得难以准确知道添加了哪些名称。
-
-```cpp
-using namespace std;
-```
-
-- 多使用 `using 声明`
-
-```cpp
-int x;
-std::cin >> x ;
-std::cout << x << std::endl;
-// 或者
-using std::cin;
-using std::cout;
-using std::endl;
-int x;
-cin >> x;
-cout << x << endl;
-```
+        ```cpp
+        int x;
+        std::cin >> x ;
+        std::cout << x << std::endl;
+        // 或者
+        using std::cin;
+        using std::cout;
+        using std::endl;
+        int x;
+        cin >> x;
+        cout << x << endl;
+        ```
 
 ---
 
@@ -803,29 +831,29 @@ cout << x << endl;
 1. 全局作用域符（`::name`）：用于类型名称（类、类成员、成员函数、变量等）前，表示作用域为全局命名空间
 2. 类作用域符（`class::name`）：用于表示指定类型的作用域范围是具体某个类的
 3. 命名空间作用域符（`namespace::name`）:用于表示指定类型的作用域范围是具体某个命名空间的
-4. :: 使用
+4. `::` 使用
 
-```cpp
-int count = 11;         // 全局（::）的 count
+    ```cpp
+    int count = 11; // 全局（::）的 count
 
-class A {
-public:
-	static int count;   // 类 A 的 count（A::count）
-};
-int A::count = 21;
+    class A {
+    public:
+        static int count; // 类 A 的 count（A::count）
+    };
+    int A::count = 21;
 
-void fun() {
-	int count = 31;     // 初始化局部的 count 为 31
-	count = 32;         // 设置局部的 count 的值为 32
-}
+    void fun() {
+        int count = 31; // 初始化局部的 count 为 31
+        count = 32; // 设置局部的 count 的值为 32
+    }
 
-int main() {
-	::count = 12;       // 测试 1：设置全局的 count 的值为 12
-	A::count = 22;      // 测试 2：设置类 A 的 count 为 22
-	fun();		        // 测试 3
-	return 0;
-}
-```
+    int main() {
+        ::count = 12; // 测试 1：设置全局的 count 的值为 12
+        A::count = 22; // 测试 2：设置类 A 的 count 为 22
+        fun(); // 测试 3
+        return 0;
+    }
+    ```
 
 ---
 
