--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -2,6 +2,7 @@
 title = '3. 内存管理'
 date = 2023-12-20T19:23:48+08:00
 draft = false
+
 +++
 
 #### 内存对齐
@@ -511,11 +512,311 @@ new (place_address) type [size] { braced initializer list }
 
 #### 共享内存
 
+##### 何谓共享内存
+
+1. 共享内存：在多处理器的计算机系统中，共享内存能够被不同CPU访问的大容量内存，或多个进程共享的一块内存存储区域
+
+2. 特点：
+
+   - 进程间传递数据**速度最快**的一种方式，共享内存**生命周期**随**内核**
+
+   - 共享内存没有自带同步或互斥，由用户来维护共享内存（一般使用信号量来同步对共享内存的访问）
+
+3. 操作概览：
+
+    |           | SYSTEM V |    POSIX     |
+    | :-------: | :------: | :----------: |
+    |   分配    | shmget() |  shm_open()  |
+    |   映射    | shmat()  |    mmap()    |
+    |   卸载    | shmdt()  |   munmap()   |
+    | 删除/释放 |    -     | shm_unlink() |
+    |   控制    | shmctl() | ftruncate()  |
+
+    - System V 共享内存和共享文件映射的**缺点**：
+
+        i. System V 共享内存模型使用的是键和标识符，与标准的 UNIX I/O 模型使用文件名和描述符不一致，意味着使用 System V 共享内存需要一整套全新的系统调用和命令
+
+        ii. 使用一个共享文件映射进行 IPC 要求创建一个磁盘文件，即使无需对共享区域进行持久存储也需要，创建文件的方式带来不便之处，也带来一些文件 I/O 开销
+
+---
+
+##### SYSTEM V 标准接口
+
+- shmget()
+
+    ```cpp
+    #include <sys/ipc.h>
+    #include <sys/shm.h>
+    //如果共享内存不存在，创建共享内存，如果存在就打开共享内存
+    int shmget(key_t key, size_t size, int shmflg);
+    //返回值：成功返回共享内存的标识符，失败返回-1
+    ```
+
+    | 参数   | 说明                                                         |
+    | ------ | ------------------------------------------------------------ |
+    | key    | 共享内存的标识符，也可当做共享内存的名字，可由`ftok`获取     |
+    | size   | 共享内存大小，一般指定为4k的倍数（内存4k为一页）             |
+    | shmflg | 共享内存的访问权限<br />IPC_CREAT：创建新的共享内存<br />IPC_EXCL：与IPC_CREAT一同使用，如共享内存已经存在，则返回错误<br />IPC_NOWAIT：读写共享内存要求无法满足时，不阻塞<br />0：如打开已存在文件，则写0 |
+
+- shmat()
+
+  ```cpp
+  #include <sys/types.h>
+  #include <sys/shm.h>
+  //将共享内存链接到进程地址空间
+  void *shmat(int shmid, const void *shmaddr, int shmflg);
+  //返回值：失败返回NULL
+  //       成功返回地址指针,且连接数加1(nattch)
+  ```
+
+  | 参数    | 说明                                                         |
+  | ------- | ------------------------------------------------------------ |
+  | shmid   | 表示符shmid，shmget的返回值                                  |
+  | shmaddr | 指定连接进程地址空间的地址<br />0：由内核映射的第一个可用地址上（推荐方式）<br />非0且shmflg不是SHM_RND：映射到addr所指定的地址上<br />非0且shmflg是SHM_RND：映射到（shmaddr -（shmaddr % SHMLBA））所表示的地址上（SHMLBA是低边界地址倍数，总是2的乘方） |
+  | shmflg  | 共享内存的权限<br />SHM_RND：配合shmaddr使用，意味取整<br />SHM_RDONLY：只读共享内存 |
+
+- shmdt()
+
+  ```cpp
+  #include <sys/types.h>
+  #include <sys/shm.h>
+  //将共享内存与当前连接进程脱离
+  int shmdt(const void* shmaddr)
+  //返回值：成功返回0,失败返回-1
+  //注意：将共享内存与进程脱离不等于删除共享内存
+  ```
+
+  | 参数    | 说明              |
+  | ------- | ----------------- |
+  | shmaddr | 由shmat返回的指针 |
+
+- shmctl()
+
+  ```cpp
+  #include <sys/ipc.h>
+  #include <sys/shm.h>
+  //shmctl系统调用对shmid标识的共享内存执行cmd操作
+  int shmctl(int shmid, int cmd, struct shmid_ds *buf);
+  //返回值：成功返回0，失败返回-1
+  ```
+
+  | 参数  | 说明                                                         |
+  | ----- | ------------------------------------------------------------ |
+  | shmid | 表示符shmid，shmget的返回值                                  |
+  | cmd   | IPC_STAT：把shmid_ds结构中的数据设置为共享内存的当前关联值<br/>IPC_SET：如进程权限满足，将当前关联值设置为shmid_ds结构中的数值<br/>IPC_RMID：删除共享内存 |
+  | buf   | `struct shmid_ds` 定义在` <sys/shm.h>`中                     |
+
+- 使用示例：
+
+  ```cpp
+  #include <stdio.h>
+  #include <stdlib.h>
+  #include <sys/ipc.h>
+  #include <sys/shm.h>
+  #include <string.h>
+  
+  #define SHM_SIZE 1024 // 共享内存大小
+  
+  int main() {
+      int shmid;
+      char *shmaddr;
+      char sharedMemReadBuf[1024] = {0};
+      key_t key = ftok(".", 's'); // 获取共享内存标识符
+  
+      if (key == -1) {
+          perror("ftok");
+          exit(1);
+      }
+  
+      // 创建共享内存区域
+      shmid = shmget(key, SHM_SIZE, IPC_CREAT | IPC_EXCL);
+      if (shmid == -1) {
+          perror("shmget");
+          exit(1);
+      }
+  
+      // 将共享内存映射到进程地址空间中
+      shmaddr = shmat(shmid, NULL, 0);
+      if (shmaddr == (char *) -1) {
+          perror("shmat");
+          exit(1);
+      }
+  
+  #if 1
+      // 在共享内存中写入数据
+      strncpy(shmaddr, "Hello, SYSTEM-V shared mem!", SHM_SIZE);
+  #else
+      // 读数据
+      // memcpy(sharedMemReadBuf, shmaddr, 1024);
+      // printf("sharedMemReadBuf:%s\n", sharedMemReadBuf);
+  #endif
+  
+      // 卸载共享内存
+      if (shmdt(shmaddr) == -1) {
+          perror("shmdt");
+          exit(1);
+      }
+  
+      return 0;
+  }
+  ```
+
+---
+
+##### POSIX 标准接口
+
+- shm_open()
+
+  ```cpp
+  #include <sys/mman.h>
+  #include <sys/stat.h>        /* For mode constants */
+  #include <fcntl.h>           /* For O_* constants */
+  int shm_open(const chart *name, int oflag, mode_t mode);
+  //返回值：成功返回文件描述符fd,失败返回-1
+  ```
+
+  | 参数  | 说明                                                         |
+  | ----- | ------------------------------------------------------------ |
+  | name  | 待创建或待打开的共享内存对象                                 |
+  | oflag | 改变调用行为的位掩码<br />O_CREAT：不存在则创建对象，新的共享内存对象初始长度为 0，其大小由 ftruncate 调整<br />O_EXCL：与 O_CREAT 互斥地创建对象，如 O_CREAT 指定名字的共享内存对象已存在，则返回错误<br />O_RDONLY：打开只读访问<br />O_RDWR：打开读写访问<br />O_TRUNC：将对象长度截断为零 |
+  | mode  | 设置对象权限的掩码值（与open() 系统调用类似），在不创建新对象时指定为 0 |
+
+- mmap()
+
+  ```cpp
+  #include <sys/mman.h>
+  void *mmap(void *addr, size_t len, int prot, int flags, int fd, off_t off);
+  //返回值：成功返回映射的内存地址指针，失败返回NULL
+  ```
+
+  | 参数  | 说明                                                         |
+  | ----- | ------------------------------------------------------------ |
+  | addr  | 将文件映射到的内存地址，一般传递NULL由内核指定               |
+  | len   | 映射文件的数据长度                                           |
+  | prot  | 内存区域的操作权限（保护属性）<br />PROT_READ<br />PROT_WRITE |
+  | flags | 标志位参数<br />MAP_SHARED：建立共享用于进程间通信，不同进程读取到同一份数据<br/>MAP_PRIVATE：只有进程自己用的内存区域<br/>MAP_ANONYMOUS：匿名映射区 |
+  | fd    | 文件描述符，用 shm_open打开或者open打开的文件                |
+  | off   | 映射文件相对于文件头的偏移位置                               |
+
+- munmap()
+
+  ```cpp
+  #include <sys/mman.h>
+  int munmap(void *addr, size_t len);
+  //返回值：成功返回0，失败返回-1
+  ```
+
+  | 参数 | 说明                 |
+  | ---- | -------------------- |
+  | addr | 由mmap成功返回的地址 |
+  | len  | 卸载的内存长度       |
+
+  > 注意：**munmap** 只是将映射的内存从进程的地址空间卸载/撤销，如进程终止前不调用，则该内存将不被释放
+
+- shm_unlink()
+
+  ```cpp
+  #include <sys/mman.h>
+  #include <sys/stat.h>        /* For mode constants */
+  #include <fcntl.h>           /* For O_* constants */
+  int shm_unlink(const char *name);
+  //返回值：成功返回文件描述符fd,失败返回-1
+  ```
+
+  | 参数 | 说明                   |
+  | ---- | ---------------------- |
+  | name | 需要删除的共享内存对象 |
+  > 注意：所有进程都卸载（unmap）某块共享内存后，内核将清除内存内容
+  
+- ftruncate()
+
+  ```cpp
+  #include <unistd.h>
+  int ftruncate(int fd, off_t length);
+  //返回值：成功返回0,失败返回-1
+  ```
+
+  | 参数   | 说明                     |
+  | ------ | ------------------------ |
+  | fd     | 文件描述符，且要求写权限 |
+  | length | 调整后的大小             |
+
+  > 注意：任何open打开的文件都可用，不限于shm_open打开的文件
+
+- 使用示例：
+
+  ```cpp
+  #include <stdio.h>
+  #include <stdlib.h>
+  #include <fcntl.h>
+  #include <sys/mman.h>
+  #include <unistd.h>
+  #include <string.h>
+
+  #define SHM_SIZE 1024 // 共享内存大小
+  #define SHM_NAME "/myshm" // 共享内存名称
+
+  int main() {
+      int fd;
+      char *shmaddr;
+      char sharedMemReadBuf[1024] = {0};
+      const char *msg = "Hi, POSIX shared mem!";
+  
+      // 创建共享内存区域
+      fd = shm_open(SHM_NAME, O_CREAT | O_RDWR, 0666);
+      if (fd == -1) {
+          perror("shm_open");
+          exit(1);
+      }
+  
+      // 调整共享内存区域的大小
+      if (ftruncate(fd, SHM_SIZE) == -1) {
+          perror("ftruncate");
+          exit(1);
+      }
+  
+      // 映射共享内存区域到进程地址空间中
+      shmaddr = mmap(NULL, SHM_SIZE, PROT_READ | PROT_WRITE,
+                                          MAP_SHARED, fd, 0);
+      if (shmaddr == MAP_FAILED) {
+          perror("mmap");
+          exit(1);
+      }
+  
+  #if 1
+      // 在共享内存中写入数据
+      strncpy(shmaddr, msg, SHM_SIZE);
+  #else
+      // 读数据
+      // memcpy(sharedMemReadBuf, shmaddr, 1024);
+      // printf("sharedMemReadBuf:%s\n", sharedMemReadBuf);
+  #endif
+      // 卸载共享内存区域与进程地址空间的映射关系
+      if (munmap(shmaddr, SHM_SIZE) == -1) {
+          perror("munmap");
+          exit(1);
+      }
+  
+      // 删除共享内存区域的文件名并释放资源
+      if (shm_unlink(SHM_NAME) == -1) {
+          perror("shm_unlink");
+          exit(1);
+      }
+  
+      return 0;
+  }
+  ```
+
+
+
+
 ---
 
 ---
 
 #### 零拷贝
+
+
 
 ---
 
