--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -192,74 +192,75 @@ draft = false
 
 #### 虚函数与纯虚函数
 
-[网址](https://blog.csdn.net/hackbuteer1/article/details/7558868)  [维基]([https://zh.wikipedia.org/wiki/%E8%99%9A%E5%87%BD%E6%95%B0](https://zh.wikipedia.org/wiki/虚函数))
+##### 虚函数 (virtual)
 
-##### 虚函数（virtual）
+> [维基-虚函数](https://zh.wikipedia.org/wiki/%E8%99%9A%E5%87%BD%E6%95%B0)
 
-- 虚函数可以被**子类继承和覆盖**，通常使用**动态调度**实现，是面向对象程序设计中（运行时）多态的重要组成部分。简言之，虚函数可以给出目标函数的定义，但该目标的具体指向在编译期可能无法确定。
+- 虚函数可以被**子类继承和覆盖**，通常使用**动态调度**实现，是OOP中 (运行时) 多态的重要组成部分。简言之，虚函数可以给出目标函数的定义，但该目标函数的具体指向在编译期可能无法确定
 
 - **C++多态(polymorphism)是通过虚函数来实现的**
 
 - 虚函数使用：
 
-> ```cpp
-> # include <iostream>
-> # include <vector>
-> 
-> using namespace std;
-> class Animal{
-> public:
-> 	virtual void eat() const { cout << "I eat like a generic Animal." << endl; }
-> 	virtual ~Animal() {}//析构函数
-> };
-> 
-> class Wolf : public Animal{
-> public:
-> 	void eat() const { cout << "I eat like a wolf!" << endl; }
-> };
-> 
-> class Fish : public Animal{
-> public:
-> 	void eat() const { cout << "I eat like a fish!" << endl; }
-> };
-> 
-> class GoldFish : public Fish{
-> public:
-> 	void eat() const { cout << "I eat like a goldfish!" << endl; }
-> };
-> 
-> class OtherAnimal : public Animal{};
-> 
-> int main(){
-> 	std::vector<Animal*> animals;
-> 	animals.push_back( new Animal() );
-> 	animals.push_back( new Wolf() );
-> 	animals.push_back( new Fish() );
-> 	animals.push_back( new GoldFish() );
-> 	animals.push_back( new OtherAnimal() );
-> 
-> 	for( std::vector<Animal*>::const_iterator it = animals.begin();
-> 		 it != animals.end(); ++it) {
-> 			(*it)->eat();
-> 			delete *it;
-> 	}
-> 	return 0;
-> }
-> 
-> //输出
-> //I eat like a generic Animal.
-> //I eat like a wolf!
-> //I eat like a fish!
-> //I eat like a goldfish!
-> //I eat like a generic Animal.
-> 
-> //当 Animal::eat() 不是被宣告为虚函数时，输出
-> //I eat like a generic Animal.
-> //I eat like a generic Animal.
-> //I eat like a generic Animal.
-> //I eat like a generic Animal.
-> //I eat like a generic Animal.
-> ```
+    ```cpp
+    # include <iostream>
+    # include <vector>
+
+    using namespace std;
+    class Animal {
+    public:
+        virtual void eat() const {
+            cout << "I eat like a generic Animal." << endl;
+        }
+    	virtual ~Animal() {}//析构函数
+    };
+    
+    class Wolf : public Animal{
+    public:
+    	void eat() const { cout << "I eat like a wolf!" << endl; }
+    };
+    
+    class Fish : public Animal{
+    public:
+    	void eat() const { cout << "I eat like a fish!" << endl; }
+    };
+    
+    class GoldFish : public Fish{
+    public:
+    	void eat() const { cout << "I eat like a goldfish!" << endl; }
+    };
+    
+    class OtherAnimal : public Animal{};
+    
+    int main(){
+        std::vector<Animal*> animals;
+        animals.push_back( new Animal() );
+        animals.push_back( new Wolf() );
+        animals.push_back( new Fish() );
+        animals.push_back( new GoldFish() );
+        animals.push_back( new OtherAnimal() );
+
+        std::vector<Animal*>::const_iterator it = animals.begin();
+        for(; it != animals.end(); ++it) {
+            (*it)->eat();
+            delete *it;
+        }
+        return 0;
+    };
+    //输出
+    //I eat like a generic Animal.
+    //I eat like a wolf!
+    //I eat like a fish!
+    //I eat like a goldfish!
+    //I eat like a generic Animal.
+    
+    //当 Animal::eat() 不是被宣告为虚函数时，输出
+    //I eat like a generic Animal.
+    //I eat like a generic Animal.
+    //I eat like a generic Animal.
+    //I eat like a generic Animal.
+    //I eat like a generic Animal.
+    ```
 
 ---
 
