--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -821,17 +821,21 @@ new (place_address) type [size] { braced initializer list }
    - 磁盘文件零拷贝
    - 网络数据零拷贝
 
+---
+
 ##### 硬件支持
 
 1. DMA
-   - 直接内存访问 (Direct Memory Access, DMA) 作为一种内存访问技术，允许某些计算机内部的硬件子系统（即计算机外设），能够独立地直接读写系统内存，而无需CPU介入处理 
-   - 在同等程度的CPU负担下，DMA是一种快速的数据传送方式
-   - 支持DMA的硬件有网卡、声卡、显卡、磁盘控制器等
-   - **零拷贝中的作用**：数据直接由硬件到内存的复制
+    - 直接内存访问 (Direct Memory Access, DMA) 作为一种内存访问技术，允许某些计算机内部的硬件子系统（即计算机外设），能够独立地直接读写系统内存，而无需CPU介入处理 
+    - 在同等程度的CPU负担下，DMA是一种快速的数据传送方式
+    - 支持DMA的硬件有网卡、声卡、显卡、磁盘控制器等
+    - **零拷贝中的作用**：数据直接由硬件到内存的复制
 2. MMU
-   - 内存管理单元 (Memory Management Unit, MMU)，或称分页内存管理单元 (Paged Memory Management Unit, PMMU)，是一种负责处理CPU的内存访问请求的计算机硬件
-   - 功能有虚拟地址到物理地址的转换 (即虚拟内存管理)、内存保护、CPU高速缓存 (Cache) 的控制
-   - **零拷贝中的作用**：内存的映射，即进程“看得到”内存
+    - 内存管理单元 (Memory Management Unit, MMU)，或称分页内存管理单元 (Paged Memory Management Unit, PMMU)，是一种负责处理CPU的内存访问请求的计算机硬件
+    - 功能有虚拟地址到物理地址的转换 (即虚拟内存管理)、内存保护、CPU高速缓存 (Cache) 的控制
+    - **零拷贝中的作用**：内存的映射，即进程“看得到”内存
+
+---
 
 ##### 非零拷贝实现
 
@@ -840,19 +844,26 @@ new (place_address) type [size] { braced initializer list }
 <img src="/images/cpp/normal_copy.png"/>
 
 1. 读数据过程：
-   - 程序读取磁盘文件，调用`read()`，用户态切换内核态
-   - DMA将文件由磁盘拷贝到内核缓冲区，进行1次DMA拷贝
-   - CPU将数据从内核缓冲区复制到用户缓冲区，进行1次CPU拷贝
-   - CPU完成拷贝后，`read()`函数返回，内核态切换用户态
+    - 程序读取磁盘文件，调用`read()`，用户态切换内核态
+    - DMA将文件由磁盘拷贝到内核缓冲区，进行1次DMA拷贝
+    - CPU将数据从内核缓冲区复制到用户缓冲区，进行1次CPU拷贝
+    - CPU完成拷贝后，`read()`函数返回，内核态切换用户态
+
 2. 写数据过程：
-   - 程序向网卡写数据，调用`write()`函数，用户态切换内核态
-   - CPU将用户缓冲区数据拷贝到内核缓冲区，进行1次CPU拷贝
-   - DMA将数据从内核缓冲区复制到`socket`缓冲区，进行1次DMA拷贝
-   - `write()`函数返回，内核态切换用户态
+    - 程序向网卡写数据，调用`write()`函数，用户态切换内核态
+    - CPU将用户缓冲区数据拷贝到内核缓冲区，进行1次CPU拷贝
+    - DMA将数据从内核缓冲区复制到`socket`缓冲区，进行1次DMA拷贝
+    - `write()`函数返回，内核态切换用户态
+
 3. 性能开销：
-   - 读过程有2次内核态-用户态切换、1次DMA拷贝、1次CPU拷贝
-   - 写过程有2次内核态-用户态切换、1次DMA拷贝、1次CPU拷贝
-4. 缺点：程序不对数据做修改，但涉及到多次内核态-用户态切换，且存在2次CPU数据拷贝，CPU负担加重
+    - 读过程有2次内核态-用户态切换、1次DMA拷贝、1次CPU拷贝
+    - 写过程有2次内核态-用户态切换、1次DMA拷贝、1次CPU拷贝
+
+4. 缺点：
+    - 涉及到多次内核态-用户态切换，陷入内核性能开销大
+    - 存在多次CPU数据拷贝，CPU负担加重
+
+---
 
 ##### 零拷贝实现
 
@@ -860,65 +871,60 @@ new (place_address) type [size] { braced initializer list }
 
 1. 实现方式：`mmap`参考[POSIX共享内存](#####POSIX 标准接口)，可直接映射内核缓冲区到用户态缓冲区，实现内核态与用户态缓冲区的共享
 
-  <img src="/images/cpp/zero_copy_mmap.png"/>
+    <img src="/images/cpp/zero_copy_mmap.png"/>
 
 2. 优点：
-  - 减少内核态-用户态切换，以及用户态-内核态之间的CPU拷贝
-  - `mmap`对大文件操作、传输存在一定优势
+    - 减少内核态-用户态切换，以及用户态-内核态之间的CPU拷贝
+    - `mmap`对大文件操作、传输存在一定优势
 3. 缺点：
-  - 内核态内部仍然存在CPU拷贝
-  - `mmap`处理小文件可能出现碎片
-  - 多个进程同时操作文件时可能产生引发`coredump`，即无资源竞争的安全性保障
+    - 内核态内部仍然存在CPU拷贝
+    - `mmap`处理小文件可能出现碎片
+    - 多个进程同时操作文件时可能产生引发`coredump`，即无资源竞争的安全性保障
 
 ###### sendfile方式
 
 1. 实现方式：[`sendfile`系统调用](https://linux.die.net/man/2/sendfile)由 Linux内核2.1版本引入，建立了两个文件间的传输通道，完成`read`+`write` 或 `mmap`+ `write`功能
 
-  <img src="/images/cpp/zero_copy_sendfile.png"/>
+    <img src="/images/cpp/zero_copy_sendfile.png"/>
 
 2. 优点：
-
-  - 减少内核态-用户态切换
+    - 减少内核态-用户态切换
 
 3. 缺点：
+    - 由于数据不经过用户缓冲区，因此该数据无法被程序修改
+    - `sendfile`在内核态内部仍存在CPU拷贝
 
-  - 由于数据不经过用户缓冲区，因此该数据无法被程序修改
-  - `sendfile`在内核态内部仍存在CPU拷贝
-
-###### sendfile+DMA收集
+###### sendfile+DMA
 
 1. 实现方式：
+    - Linux 内核2.4版本优化了`sendfile`系统调用，但需硬件DMA的配合
+    - `sendfile`将内核缓冲区中的文件描述符`fd`、地址偏移量等描述性信息记录到`socket`缓冲区中
+    - DMA根据`socket`缓冲区中的信息将数据从内核缓冲区直接拷贝到网卡
 
-  - Linux 内核2.4版本优化了`sendfile`系统调用，但需硬件DMA的配合
-  - `sendfile`将内核缓冲区中的文件描述符`fd`、地址偏移量等描述性信息记录到`socket`缓冲区中
-  - DMA根据`socket`缓冲区中的信息将数据从内核缓冲区直接拷贝到网卡
-
-  <img src="/images/cpp/zero_copy_sendfile_dma.png"/>
+    <img src="/images/cpp/zero_copy_sendfile_dma.png"/>
 
 2. 优点：
+    - 由于描述性信息数据量非常小，可以认为消除了CPU拷贝
 
-  - 由于描述性信息数据量非常小，可以认为消除了CPU拷贝
-
-3. 缺点
-
-  - 仍无法修改数据，且需硬件DMA的配合
-  - 只能将文件数据拷贝到socket描述符，存在局限性
+3. 缺点：
+    - 仍无法修改数据，且需硬件DMA的配合
+    - 只能将文件数据拷贝到socket描述符，存在局限性
 
 ###### splice方式
 
 1. 实现方式：[`splice`系统调用](https://linux.die.net/man/2/splice)由Linux内核2.6版本引入
 
-  <img src="/images/cpp/zero_copy_splice.png"/>
+    <img src="/images/cpp/zero_copy_splice.png"/>
 
-2. 优点
+2. 优点：
 
-  - splice 在内核的不同缓冲区之间采用管道传输数据，避免 CPU 拷贝
-  - 无需硬件支持
-  - 不局限于socket，可实现普通文件 (文件描述符) 间的数据零拷贝
+    - splice 在内核的不同缓冲区之间采用管道传输数据，避免 CPU 拷贝
+    - 无需硬件支持
+    - 不局限于socket，可实现普通文件 (文件描述符) 间的数据零拷贝
 
-3. 缺点
+3. 缺点：
 
-  - 文件描述符中至少有一个是管道(`pipe`)
+    - 文件描述符中至少有一个是管道(`pipe`)
 
 ---
 
@@ -928,8 +934,8 @@ new (place_address) type [size] { braced initializer list }
 
 1. 定义
 
-  - 函数指针指向的是特殊的数据类型，函数的类型是由其返回的数据类型和其参数列表共同决定的，而函数的名称则不是其类型的一部分
-  - 一个具体函数的名字，如果后面不跟调用符号(即括号)，则该名字就是该函数的指针(注：大部分情况下正确，但并不严格)
+    - 函数指针指向的是特殊的数据类型，函数的类型是由其返回的数据类型和其参数列表共同决定的，而函数的名称则不是其类型的一部分
+    - 一个具体函数的名字，如果后面不跟调用符号(即括号)，则该名字就是该函数的指针(注：大部分情况下正确，但并不严格)
 
 2. 声明方法
 
