update  Zero-Copy

--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -503,7 +503,6 @@ new (place_address) type [size] { braced initializer list }
 4. 必须保证 `delete this` 后没有人使用了
 
 ---
-
 ---
 
 #### 共享内存 (Shared Memory)
@@ -805,7 +804,6 @@ new (place_address) type [size] { braced initializer list }
 
 
 ---
-
 ---
 
 #### 零拷贝 (Zero-Copy)
@@ -867,7 +865,7 @@ new (place_address) type [size] { braced initializer list }
 
 ##### 零拷贝实现
 
-###### mmap方式
+###### **mmap**
 
 1. 实现方式：`mmap`参考[POSIX共享内存](#####POSIX 标准接口)，可直接映射内核缓冲区到用户态缓冲区，实现内核态与用户态缓冲区的共享
 
@@ -881,7 +879,7 @@ new (place_address) type [size] { braced initializer list }
     - `mmap`处理小文件可能出现碎片
     - 多个进程同时操作文件时可能产生引发`coredump`，即无资源竞争的安全性保障
 
-###### sendfile方式
+###### **sendfile**
 
 1. 实现方式：[`sendfile`系统调用](https://linux.die.net/man/2/sendfile)由 Linux内核2.1版本引入，建立了两个文件间的传输通道，完成`read`+`write` 或 `mmap`+ `write`功能
 
@@ -894,7 +892,7 @@ new (place_address) type [size] { braced initializer list }
     - 由于数据不经过用户缓冲区，因此该数据无法被程序修改
     - `sendfile`在内核态内部仍存在CPU拷贝
 
-###### sendfile+DMA
+###### **sendfile+DMA**
 
 1. 实现方式：
     - Linux 内核2.4版本优化了`sendfile`系统调用，但需硬件DMA的配合
@@ -910,7 +908,7 @@ new (place_address) type [size] { braced initializer list }
     - 仍无法修改数据，且需硬件DMA的配合
     - 只能将文件数据拷贝到socket描述符，存在局限性
 
-###### splice方式
+###### **splice**
 
 1. 实现方式：[`splice`系统调用](https://linux.die.net/man/2/splice)由Linux内核2.6版本引入
 
@@ -928,6 +926,12 @@ new (place_address) type [size] { braced initializer list }
 
 ---
 
+##### 零拷贝实践
+
+- Kafka：调用 Java NIO 库里的 transferTo 方法，如 Linux 系统支持 sendfile()，transferTo() 最终将使用 sendfile() 系统调用函数
+- Nginx：使用 sendfile()
+
+---
 ---
 
 #### 函数指针
