fix something in mem

--- a/content/cpp/3.memory.md
+++ b/content/cpp/3.memory.md
@@ -24,23 +24,26 @@ draft = false
   }
   ```
 
-##### 原因
+##### 内存对齐原因
 
   1. 平台原因(移植原因)
 
-    - 不是所有的硬件平台都能访问任意地址上的任意数据的
-    - 某些硬件平台只能在某些地址处取某些特定类型的数据，否则抛出硬件异常
+        - 不是所有的硬件平台都能访问任意地址上的任意数据的
+
+        - 某些硬件平台只能在某些地址处取某些特定类型的数据，否则抛出硬件异常
 
   2. 性能原因
-    - 数据结构(尤其是栈)应该尽可能地在自然边界上对齐
-    - 为了访问未对齐的内存，处理器需要作两次内存访问；而对齐的内存访问仅需要一次访问
 
-##### 规则
+        - 数据结构(尤其是栈)应该尽可能地在自然边界上对齐
 
-  - 不同平台的编译器都有自己的默认“对齐系数”（对齐模数）
-  - 通过预编译命令`#pragma pack(n)` (n=1,2,4,8,16)，其中 n 就是指定的“对齐系数”
-  - 有效对齐值：`#pragma pack`指定值 和 结构体中最长数据类型长度 中**较小**的值，也叫对齐单位
-  - 规则：
+        - 为了访问未对齐的内存，处理器需要作两次内存访问；而对齐的内存访问仅需要一次访问
+
+##### 内存对齐规则
+
+- 不同平台的编译器都有自己的默认“对齐系数”（对齐模数）
+- 通过预编译命令`#pragma pack(n)` (n=1,2,4,8,16)，其中 n 就是指定的“对齐系数”
+- 有效对齐值：`#pragma pack`指定值 和 结构体中最长数据类型长度 中**较小**的值，也叫对齐单位
+- 具体规则：
     1. 结构体变量的首地址是有效对齐值（对齐单位）的整数倍
     2. 结构体第一个成员的偏移量（offset）为0，以后每个成员相对于结构体首地址的 offset 都是该成员大小与有效对齐值中较小数值的整数倍，如有需要编译器会在成员间填充字节
     3. 结构体的总大小为 有效对齐值 的整数倍，如有需要编译器会在最末一个成员后填充字节
@@ -111,11 +114,11 @@ draft = false
 
 #### 大小端检测方法
 
-* 大端模式：是指数据的高字节保存在内存的低地址中，而数据的低字节保存在内存的高地址端
-* 小端模式，是指数据的高字节保存在内存的高地址中，低位字节保存在在内存的低地址端
-* [Linux C中判断cpu大小端序的几种方法: 用指针判断linux中是大端还是小端](https://blog.csdn.net/guotianqing/article/details/88775949)
+- 大端模式：数据的高字节在内存的低地址，低字节在内存的高地址端
+- 小端模式：数据的高字节在内存的高地址，低字节在内存的低地址端
+- [Linux C中判断cpu大小端序的几种方法: 用指针判断linux中是大端还是小端](https://blog.csdn.net/guotianqing/article/details/88775949)
 
-1. ###### Linux内核对大小端的处理
+1. ##### Linux内核对大小端处理
 
    ```c++
    static union { 
@@ -131,7 +134,7 @@ draft = false
    	printf("小端序\n");
    ```
 
-2. ###### 使用联合体
+2. ##### 使用联合体
 
    ```c++
    int check_cpu_type(){
@@ -149,7 +152,7 @@ draft = false
    }
    ```
 
-3. ###### 使用指针
+3. ##### 使用指针
 
    ```c++
    int check_cpu_type() {
