--- a/content/cpp/6.parallelel_concurrency.md
+++ b/content/cpp/6.parallelel_concurrency.md
@@ -8,6 +8,10 @@ draft = false
 
 #### CPU & 编程模型
 
+##### 并发
+
+##### 并行
+
 ---
 
 #### 资源管理/共享
@@ -23,6 +27,14 @@ draft = false
 ---
 
 #### 协程
+
+---
+
+#### 阻塞非阻塞
+
+---
+
+#### 同步异步
 
 ---
 
