optimize for blog

--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -68,9 +68,25 @@ draft = false
 
 ---
 
-###### 静态多态（编译期/早绑定）
+###### 函数重载
 
-- 函数重载
+- 作用:
+
+    1. 允许创建多个具有不同实现的同名函数
+    2. 允许一个函数调用根据上下文执行不同任务
+
+- 重载规则:
+
+    1. 多个函数定义使用相同的函数名称
+    2. 函数参数的数量或类型必须有区别
+
+- 函数重载匹配原则：
+
+    1. 函数名查找
+    2. 确定候选函数
+    3. 寻找"最佳匹配", 即形式参数类型与实际参数类型相匹配
+
+- 示例:
 
     ```cpp
     class A
@@ -80,12 +96,6 @@ draft = false
         void do(int a, int b);
     };
     ```
-
-- 函数重载匹配原则：
-
-    1. 名字查找
-    2. 确定候选函数
-    3. 寻找最佳匹配
 
 ---
 
