--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -68,12 +68,9 @@ draft = false
 
 ---
 
-###### 函数重载
+###### 静态多态 (编译期/早绑定)
 
-- 作用:
-
-    1. 允许创建多个具有不同实现的同名函数
-    2. 允许一个函数调用根据上下文执行不同任务
+**函数重载**: 根据不同的参数初始化方式区分函数
 
 - 重载规则:
 
@@ -86,20 +83,71 @@ draft = false
     2. 确定候选函数
     3. 寻找"最佳匹配", 即形式参数类型与实际参数类型相匹配
 
+- 注意事项:
+
+    1. 某个类型的参数和该类型的引用参数是一样的, 如
+        ```cpp
+        max(double x, double y);
+        max(double &x, double &y);
+        ```
+
+    2. 某个类型的参数和该类型的`const`参数也是一样的, 如
+        ```cpp
+        max(double x, double y);
+        max(const double x, const double y);
+        ```
+
+    3. 函数重载机制可以区分引用(或指针)和const、volatile引用(或指针)
+
+    4. 总结: 重载时根据函数参数的数量、类型进行区分，同时当`const`、`volatile`限定引用和指针类型参数时，也可区分
+
+- C++原理:
+
+    1. 引入了**函数签名**，包括函数的名称和参数列表。函数签名在重载时能够通过参数列表的不同来唯一标识不同版本的函数。
+    2. 引入了**类型安全和面向对象**编程的特性，通过支持函数重载，C++可更方便地表达相似但具有不同参数的操作。
+    3. C++**编译器**能够利用函数的参数类型和个数生成正确的函数调用代码。函数签名帮助编译器在解析函数调用时准确匹配函数版本。
+
 - 示例:
 
     ```cpp
-    class A
-    {
+    #include <iostream>
+    using namespace std;
+
+    class Over {
     public:
-        void do(int a);
-        void do(int a, int b);
+        Over() { cout << "Over default constructor\n"; }
+        Over( Over &o ) { cout << "Over&\n"; }
+        Over( const Over &co ) { cout << "const Over&\n"; }
+        Over( volatile Over &vo ) { cout << "volatile Over&\n"; }
     };
+
+    int main() {
+        Over o1;            // Calls default constructor.
+        Over o2( o1 );      // Calls Over( Over& ).
+        const Over o3;      // Calls default constructor.
+        Over o4( o3 );      // Calls Over( const Over& ).
+        volatile Over o5;   // Calls default constructor.
+        Over o6( o5 );      // Calls Over( volatile Over& ).
+    }
     ```
+
+**为什么C不支持函数重载?**
+
+1. 函数唯一标识规则简单:
+
+    C函数的唯一标识符是函数的名称。如果允许函数重载，编译器将难以确定应该调用哪个版本的函数，因为函数名无法唯一标识一个函数。
+
+2. 参数类型信息缺失
+
+    C函数的声明和调用仅依赖于函数的名称，而不考虑参数的类型和个数。无法通过函数名区分不同的函数版本。
+
+3. 编译器简单性
+
+    C语言编译器不支持更复杂的名称解析和调用规则，因此无法支持函数重载。
 
 ---
 
-###### 动态多态（运行期期/晚绑定）
+###### 动态多态 (运行期/晚绑定)
 
 - 虚函数：用 **`virtual`** 修饰成员函数，使其成为虚函数
 
