--- a/content/cpp/2.oop.md
+++ b/content/cpp/2.oop.md
@@ -156,7 +156,7 @@ draft = false
     - 普通函数（非类成员函数）不能是虚函数
     - 静态函数（static）不能是虚函数
     - 构造函数不能是虚函数（因为在调用构造函数时，虚表指针并没有在对象的内存空间中，必须要构造函数调用完成后才会形成虚表指针）
-    - 内联函数不能是表现多态性时的虚函数，解释见：[虚函数（virtual）可以是内联函数（inline）吗？](# 虚函数（virtual）可以是内联函数（inline）吗？)
+    - 内联函数不能是表现多态性时的虚函数，解释见：[虚函数可以是内联函数(inline)吗？](#####虚函数可以是内联函数(inline)吗？)
 
 - 动态多态使用
 
